# rust-spdk-io

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: e2e.yml  spdk.yml
cmake/: spdk_deb.cmake
cmake/pkg/: control.in  spdk.conf
docs/: CustomBuild.md  Design.md  Reference.md
docs/design/: README.md  architecture.md  bdev.md  core-types.md  crate-structure.md  future.md  memory.md  nvme.md  nvmf.md  pkgconf.md  status.md  testing.md
pkgconf/: Cargo.toml  README.md
pkgconf/src/: lib.rs
scripts/: check-deps.sh
spdk-io/: Cargo.toml
spdk-io-build/: Cargo.toml
spdk-io-build/src/: lib.rs
spdk-io-sys/: Cargo.toml  README.md  build.rs
spdk-io/src/: complete.rs  env.rs  lib.rs  thread.rs
spdk-io/tests/: env_init.rs  mempool_test.rs  nvmf_test.rs  thread_test.rs
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  inventory.py  run-test.sh  test_echo.yml
tests/infra/: CMakeLists.txt  Infra.md  destroy-vm.sh  main.tf  outputs.tf  start-vm.sh  terraform.tfvars  variables.tf
