[package]
name = "pkgconf"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
description = "Parse pkg-config output with proper --whole-archive and static library support"

[dependencies]

[dev-dependencies]
tempfile.workspace = true
