[package]
name = "spdk-io"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
description = "SPDK for Rust with async/await"
readme = "../README.md"

[dependencies]
spdk-io-sys.workspace = true
thiserror.workspace = true
futures-channel.workspace = true

[dev-dependencies]
futures-task.workspace = true
futures.workspace = true
futures-lite.workspace = true
libc.workspace = true
